# ARVoxelCarving

./: .gitignore  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  CMakeLists_old.txt  Dockerfile  README.md  VoxelCarve.h  VoxelCarveTest.cpp  VoxelCarveTest.h  VoxelGrid.cpp  VoxelGrid.h  aruco_marker_detection.cpp  aruco_marker_detection.h  aruco_marker_generation.cpp  camera_calib.yml  camera_calibration.cpp  camera_calibration.h  docker-compose.yaml  main.cpp  sam_segmentation_generation.cpp  sam_segmentation_generation.h
Segmentation/: requirements.txt  segment_main.py  segmentation.py
Segmentation/sam2/: build_sam.py
data/: bunny_neighbour_search.off  bunny_noise.off  bunny_normal_noise.off  object.off  object_normal_noise.off  object_smoothened_average.off  torus_noise.off
mesh/: CMakeLists.txt  MarchingCubes.cpp  MarchingCubes.h  Mesh.cpp  Mesh.h  MeshDataStructures.h  MeshLoader.cpp  MeshLoader.h  MeshSmoother.cpp  MeshSmoother.h  PostProcInterface.cpp  PostProcInterface.h  SDF.h
resources/u_poses/: 0.txt  10.txt  12.txt  25.txt  26.txt  29.txt  3.txt  30.txt  35.txt  4.txt  7.txt  8.txt  9.txt
